# FitTrackee

./: .coveragerc  .dockerignore  .env.docker  .env.docker.dev  .env.docker.example  .env.example  .eslintrc.json  .flake8  .gitignore  .gitlab-ci.yml  .isort.cfg  .prettierrc  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile-dev  Makefile  Makefile.config  Makefile.custom.config.example  Pipfile  README.md  SECURITY.md  VERSION  babel.cfg  docker-compose-ci.yml  docker-compose-dev.yml  docker-compose.yaml  docker-compose.yml  docker-entrypoint-dev.sh  docker-entrypoint.sh  docker-release.sh  functions.py  messages.pot  mypy.ini  package-lock.json  package.json  param.yml.example  pyproject.toml  pytest.ini  (+2 more)
.devcontainer/: .env.devcontainer  Dockerfile-devcontainer  devcontainer.json  docker-compose-devcontainer.yml  docker-entrypoint-devcontainer.sh
.github/ISSUE_TEMPLATE/: bug_report.yaml
.github/workflows/: .e2e-tests.yml  .publish-docker-image.yml  .publish-docker-images.yml  .tests-and-publish-python.yml  .tests-docker.yml  .tests-javascript.yml  .tests-python.yml  .tests.yml  .workflow-e2e-with-sources.yml  .workflow-e2e.yml  .workflow-python.yml  docker.yaml  sync-merge.yaml  sync-upstream.yaml
db/: Dockerfile  create-databases.sh  create.sql  create_ci_test_db.py  install_postgis_for_ci_e2e_package_tests.py
docker/: init-database.sh  lint-python.sh  run-workers.sh  set-admin.sh  shell.sh  test-e2e.sh  test-python.sh
docs/: .buildinfo  CNAME  apps.html  changelog.html  cli.html  features.html  genindex.html  http-routingtable.html  index.html  installation.html  oauth.html  objects.inv  search.html  searchindex.js  third_party_tools.html  troubleshooting.html
docs/_sources/: changelog.md.txt  cli.rst.txt  features.rst.txt  index.rst.txt  installation.rst.txt  oauth.rst.txt  troubleshooting.rst.txt
docs/_static/: custom.css  documentation_options.js
docs/api/: activities.html  auth.html  configuration.html  index.html  oauth2.html  records.html  sports.html  stats.html  users.html  workouts.html
docs/db/: mpwo.sql  mpwo_user.sql
docs/dbm/: mpwo.graphml
docs/en/: .buildinfo  changelog.html  cli.html  contributing.html  features.html  genindex.html  http-routingtable.html  index.html  installation.html  oauth.html  objects.inv  search.html  searchindex.js  third_party_tools.html  upgrading-to-1.0.0.html  upgrading-to-1.0.x.html
docs/fr/: .buildinfo  changelog.html  cli.html  contributing.html  features.html  genindex.html  http-routingtable.html  index.html  installation.html  oauth.html  objects.inv  search.html  searchindex.js  third_party_tools.html  upgrading-to-1.0.0.html  upgrading-to-1.0.x.html
docs/source/: conf.py  index.rst
docs/troubleshooting/: administrator.html  index.html  user.html
docsrc/gettext/: docs.pot
docsrc/source/: apps.rst  changelog.md  cli.rst  conf.py  features.rst  index.rst  installation.rst  oauth.rst  third_party_tools.rst  upgrading-to-1.0.0.rst  upgrading-to-1.0.rst  upgrading-to-1.0.x.rst
e2e/: conftest.py  test.gpx  test_activities.py  test_index.py  test_login.py  test_logout.py  test_profile.py  test_registration.py  test_workouts.py  utils.py
fittrackee/: __init__.py  __main__.py  config.py  constants.py  database.py  database_utils.py  dates.py  dramatiq_broker.py  exceptions.py  files.py  languages.py  privacy_levels.py  request.py  responses.py  server.py  tasks.py  templates.py  utils.py  visibility_levels.py
fittrackee/activities/: activities.py  models.py  records.py  sports.py  stats.py  utils.py  utils_files.py  utils_gpx.py  utils_id.py  utils_weather.py
fittrackee/administration/: exceptions.py  models.py  reports_email_service.py  reports_service.py  users_service.py
fittrackee/application/: app_config.py  exceptions.py  health_check.py  models.py  (+2 more)
fittrackee_api/: Dockerfile  Pipfile  pyproject.toml  requirements.txt  server.py
fittrackee_api/db/: Dockerfile  create.sql
fittrackee_api/fittrackee_api/: __init__.py  config.py  tasks.py
fittrackee_api/fittrackee_api/activities/: activities.py  models.py  records.py  sports.py  stats.py  utils.py  utils_format.py  utils_gpx.py  utils_weather.py
fittrackee_api/fittrackee_api/application/: app_config.py  models.py  utils.py
fittrackee_api/fittrackee_api/email/templates/password_reset_request/en/: body.html  body.txt
fittrackee_api/fittrackee_api/email/templates/password_reset_request/fr/: body.html  body.txt  subject.txt
fittrackee_api/fittrackee_api/tests/: conftest.py  test_activities_api_0_get.py  test_activities_api_1_post.py  test_activities_api_2_patch.py  test_activities_api_3_delete.py  test_activities_model.py  test_app_config_api.py  test_app_config_model.py  test_auth_api.py  test_config.py  test_email.py  test_email_template_password_request.py  test_email_utils.py  test_records_api.py  test_records_model.py  test_sports_api.py  test_sports_model.py  test_stats_api.py  test_users_api.py  test_users_model.py
fittrackee_api/fittrackee_api/tests/template_results/: password_reset_request.py
fittrackee_api/fittrackee_api/users/: auth.py  models.py  users.py  utils.py  utils_token.py
fittrackee_api/migrations/versions/: 02_b7cfe0c17708_create_activity_sport_tables.py  07_9f8c9c37da44_add_static_map_id_activity_table.py  096dd0b43beb_.py  11_27425324c9e3_add _weekm_user_table.py  12_f69f1e413bde_add_language_to_user_table.py  13_1345afe3b11d_replace_is_default_with_is_active_in_sports_table.py  14_8a0aad4c838c_add_app_config_in_database.py  27425324c9e3_.py  71093ac9ca44_.py
fittrackee_client/: .env  .eslintrc.cjs  .eslintrc.json  .gitignore  .prettierrc  .prettierrc.json  Dockerfile  README.md  eslint.config.ts  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts  vue.config.js
fittrackee_client_old/: Dockerfile
gpx/: 20161227_140317.gpx
mpwo_api/: Dockerfile  Dockerfile-ci  requirements.txt  server.py
mpwo_client/: .eslintrc.json  Dockerfile  Dockerfile-ci  package-lock.json  package.json
nginx/: Dockerfile  nginx.conf
templates/: index.html
(+2161 files in other folders)
