[tool.poetry]
name = "fittrackee"
version = "0.12.2"
description = "Self-hosted outdoor workout/activity tracker"
authors = ["SamR1"]
license = "AGPL-3.0-only"
readme = "README.md"
homepage = "https://github.com/SamR1/FitTrackee"
documentation = "https://docs.fittrackee.org"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Flask",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: JavaScript"
]
exclude = ["fittrackee/tests"]

[tool.poetry.urls]
Issues = "https://github.com/SamR1/FitTrackee/issues"
Changelog = "https://docs.fittrackee.org/en/changelog.html"
"Release Notes" = "https://github.com/SamR1/FitTrackee/releases"

[tool.poetry.dependencies]
python = "^3.9.2"
authlib = "=1.5.2"
babel = "^2.11.0"
click = "^8.1.8"
dramatiq = {version = "^1.15.0", extras = ["redis"]}
dramatiq-abort = {extras = ["redis"], version = "^1.2.1"}
feedgenerator = "^2.2.1"
fitdecode = "=0.11.0"
flask = "^3.1.2"
flask-babel = "^4.0.0"
flask-bcrypt = "^1.0.1"
flask-dramatiq = "^0.6.0"
flask-limiter = {version = "^3.11.0", extras = ["redis"]}  # flask-limiter 3.12+ requires python 3.10+
flask-migrate = "4.1.0"
flask-sqlalchemy = "3.1.1"
gpxpy = "=1.6.2"
gunicorn = "^23.0.0"
humanize = "^4.13.0"
jsonschema = "^4.25.1"
lxml = "^6.0.1"
mistune = "^3.1.4"
nh3 = "^0.3.0"
psycopg2-binary = "^2.9.10"
pyjwt = "^2.10.1"
pyopenssl = "^25.1.0"
pytz = "^2025.2"
shortuuid = "^1.0.13"
sqlalchemy = "=2.0.43"
staticmap3 = {extras = ["filecache"], version = "^0.1.0"}
ua-parser = "^1.0.0"
xmltodict = "^0.14.2"

[tool.poetry.group.dev.dependencies]
bandit = "^1.8.6"
furo = "^2025.7.19"
mypy = "^1.17.1"
pytest = "^8.4.1"
pytest-cov = "^6.1.0"
pytest-html = "^4.1.1"
pytest-runner = "^6.0.1"
pytest-selenium = "^4.1.0"
pytest-xdist = {extras = ["psutil"], version = "^3.8.0"}
recommonmark = "^0.7.1"
ruff = "^0.12.11"
selenium = "^4.35.0"
sphinx = "^7.4.7" # sphinx 8+ requires python 3.10+
sphinx-copybutton = "^0.5.2"
sphinx-intl = "^2.3.2"
sphinxcontrib-httpdomain = "^1.8.1"
time-machine = "^2.19.0"
types-freezegun = "^1.1"
types-pytz = "^2025.2"
types-redis = "^4.6"
types-requests = "^2.32"

[tool.poetry.scripts]
fittrackee = 'fittrackee.__main__:main'
ftcli = 'fittrackee.cli:cli'

[tool.ruff]
line-length = 79
exclude = ["fittrackee/migrations/*"]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # isort
    "I",
    # flake8-builtins
    "A",
    # flake8-type-checking
    "TC",
    # flake8-datetimez
    "DTZ",
    # flake8-print
    "T20",
    # flake8-bugbear
    "B",
    # Ruff-specific rules
    "RUF",
]
ignore = ["RUF012"]

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint.per-file-ignores]
"fittrackee/__main__.py" = ["E501"]
"fittrackee/activities/stats.py" = ["E501"]
"fittrackee/application/app_config.py" = ["E501"]
"fittrackee/tests/test_email.py" = ["E501"]
"fittrackee/tests/test_email_template_password_request.py" = ["E501"]
"fittrackee/tests/fixtures/fixtures_workouts.py" = ["E501"]

[tool.pytest.ini_options]
markers = [
    "disable_autouse_update_records_patch: disable records update",
    "disable_autouse_default_weather_service: disable weather service",
]

[tool.bandit]
exclude_dirs = ["fittrackee/tests/*", "fittrackee/migrations/*"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
