[tool.poetry]
name = "fittrackee"
version = "1.0.3"
description = "Self-hosted outdoor workout/activity tracker"
authors = ["SamR1"]
license = "AGPL-3.0-only"
readme = "README.md"
homepage = "https://github.com/SamR1/FitTrackee"
documentation = "https://docs.fittrackee.org"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: Flask",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: JavaScript"
]
exclude = ["fittrackee/tests"]

[tool.poetry.urls]
Issues = "https://github.com/SamR1/FitTrackee/issues"
Changelog = "https://docs.fittrackee.org/en/changelog.html"
"Release Notes" = "https://github.com/SamR1/FitTrackee/releases"

[tool.poetry.dependencies]
python = "^3.10"
authlib = "=1.6.5"
babel = "^2.11.0"
click = "^8.3.0"
dramatiq = {version = "^1.15.0", extras = ["redis"]}
dramatiq-abort = {extras = ["redis"], version = "^1.2.1"}
feedgenerator = "^2.2.1"
fitdecode = "=0.11.0"
flask = "^3.1.2"
flask-babel = "^4.0.0"
flask-bcrypt = "^1.0.1"
flask-dramatiq = "^0.6.0"
flask-limiter = {version = "^4.0.0", extras = ["redis"]}
flask-migrate = "4.1.0"
flask-sqlalchemy = "3.1.1"
geoalchemy2 = {extras = ["shapely"], version = "^0.18.0"}
geopandas = "=1.1.1"
gpxpy = "=1.6.2"
gunicorn = "^23.0.0"
humanize = "^4.14.0"
jsonschema = "^4.25.1"
lxml = "^6.0.2"
mistune = "^3.1.4"
nh3 = "^0.3.2"
numpy = "=2.2.6" # numpy 2.3+ requires python 3.11+. geoalchemy2 dependency.
pandas = "=2.3.2" # temporary workaround to enable installation on RHEL 7, installation of 2.3.3 generates an error
psycopg2-binary = "^2.9.11"
pyjwt = "^2.10.1"
pyopenssl = "^25.3.0"
pytz = "^2025.2"
shortuuid = "^1.0.13"
sqlalchemy = "=2.0.44"
staticmap3 = {extras = ["filecache"], version = "^0.1.0"}
ua-parser = "^1.0.0"
xmltodict = "^1.0.2"

[tool.poetry.group.dev.dependencies]
bandit = "^1.8.6"
furo = "^2025.9.25"
mypy = "^1.18.2"
pytest = "^8.4.2"
pytest-cov = "^7.0.0"
pytest-html = "^4.1.1"
pytest-runner = "^6.0.1"
pytest-selenium = "^4.1.0"
pytest-xdist = {extras = ["psutil"], version = "^3.8.0"}
recommonmark = "^0.7.1"
ruff = "^0.14.3"
selenium = "^4.38.0"
sphinx = "^8.1.3" # sphinx 8.2+ requires python 3.11+
sphinx-copybutton = "^0.5.2"
sphinx-intl = "^2.3.2"
sphinxcontrib-httpdomain = "^1.8.1"
time-machine = "^2.19.0"
types-freezegun = "^1.1"
types-pytz = "^2025.2"
types-redis = "^4.6"
types-requests = "^2.32"

[tool.poetry.scripts]
fittrackee = 'fittrackee.__main__:main'
ftcli = 'fittrackee.cli:cli'

[tool.ruff]
line-length = 79
exclude = ["fittrackee/migrations/*"]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # isort
    "I",
    # flake8-builtins
    "A",
    # flake8-type-checking
    "TC",
    # flake8-datetimez
    "DTZ",
    # flake8-print
    "T20",
    # flake8-bugbear
    "B",
    # Ruff-specific rules
    "RUF",
]
ignore = ["RUF012"]

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint.per-file-ignores]
"fittrackee/__main__.py" = ["E501"]
"fittrackee/activities/stats.py" = ["E501"]
"fittrackee/application/app_config.py" = ["E501"]
"fittrackee/tests/test_email.py" = ["E501"]
"fittrackee/tests/test_email_template_password_request.py" = ["E501"]
"fittrackee/tests/fixtures/fixtures_workouts.py" = ["E501"]

[tool.pytest.ini_options]
markers = [
    "disable_autouse_update_records_patch: disable records update",
    "disable_autouse_default_weather_service: disable weather service",
]

[tool.bandit]
exclude_dirs = ["fittrackee/tests/*", "fittrackee/migrations/*"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
