[tool.poetry]
name = "fittrackee_api"
version = "0.3.0-beta"
description = ""
authors = ["Your Name <you@example.com>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1"
flask-migrate = "^2.5"
flask-bcrypt = "^0.7.1"
pyjwt = "^1.7"
gpxpy = "=1.3.4"
psycopg2-binary = "^2.8"
staticmap = "^0.5.4"
pytz = "^2019.3"
python-forecastio = "^1.4"
gunicorn = "^19.9"
tqdm = "^4.38"

[tool.poetry.dev-dependencies]
pytest = "^5.2.2"
pytest-black = "^0.3.7"
pytest-cov = "^2.7"
pytest-isort = "^0.3.1"
pytest-flake8 = "^1.0"
pytest-runner = "^5.1"
codacy-coverage = "^1.3"
sphinx = "^2.2.1"
sphinxcontrib-httpdomain = "^1.7"
sphinx-bootstrap-theme = "^0.7.1"
recommonmark = "^0.6.0"
pyopenssl = "^19.0"

[tool.pytest]
norecursedirs = "fittrackee_api/.venv"

[tool.black]
line-length = 79
skip-string-normalization = true
target-version = ["py37"]
include = ".py$"
exclude = "migrations"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
