[tool.poetry]
name = "fittrackee_api"
version = "0.2.5-beta"
description = ""
authors = ["Your Name <you@example.com>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1"
flask-migrate = "^2.5"
flask-bcrypt = "^0.7.1"
pyjwt = "^1.7"
gpxpy = "=1.3.4"
psycopg2-binary = "^2.8"
staticmap = "^0.5.4"
pytz = "^2020.1"
python-forecastio = "^1.4"
gunicorn = "^20.0"
tqdm = "^4.42"
humanize = "^2.5.0"
dramatiq = {extras = ["redis"], version = "^1.9.0"}
flask-dramatiq = "^0.6.0"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
pytest = "^5.4"
pytest-black = "^0.3.10"
pytest-cov = "^2.10"
pytest-isort = "^1.1"
pytest-flake8 = "^1.0"
pytest-runner = "^5.2"
codacy-coverage = "^1.3"
sphinx = "^3.0"
sphinxcontrib-httpdomain = "^1.7"
sphinx-bootstrap-theme = "^0.7.1"
recommonmark = "^0.6.0"
pyopenssl = "^19.0"
freezegun = "^0.3.15"

[tool.pytest]
norecursedirs = "fittrackee_api/.venv"

[tool.black]
line-length = 79
skip-string-normalization = true
target-version = ["py37", "py38"]
include = ".py$"
exclude = "migrations"

[tool.isort]
known_third_party = "fittrackee_api"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
combine_as_imports = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
